--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "expo-image-picker": "^7.0.0",
+    "expo-permissions": "^7.0.0",
     "firebase": "^7.3.0",
     "moment": "^2.24.0",
     "react": "16.8.3",
