--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-cn-richtext-editor": "^1.0.42",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-keyboard-listener": "^1.1.0",
+    "react-native-maps": "0.26.1",
     "react-native-popup-menu": "^0.15.6",
     "react-native-reanimated": "~1.2.0",
     "react-native-web": "^0.11.7",
