fixed one more bug with navigation form home screen

--- a/app.json
+++ b/app.json
@@ -25,6 +25,8 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": "",
+    "githubUrl": "https://github.com/mawilliams098/CS4720-Mindfulness-App"
   }
 }
